--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "mongoose": "^5.4.2",
     "path": "^0.12.7",
